# world_university_scraper

./: .env.template  .gitignore  README.md  pyproject.toml  review_pkl.py  setup.py  verify_database.py
config/: default.yml  default_selenium.yml  development.yml  full_pipeline.yml  production.yml  university_detail.yml
data/processed/: rankings_processed_20250313_121234.pkl
data/raw/: rankings_2025_reputation_20250313_145239.json  rankings_raw_20250313_114511.html
scripts/: scrape_rankings.py  scrape_universities.py
src/: __init__.py  __main__.py
src/core/: config.py  exceptions.py  pipeline.py  university_pipeline.py
src/exporters/: __init__.py  base_exporter.py  exporter_factory.py  file_exporter.py  postgres_exporter.py
src/parsers/: __init__.py  base_parser.py  rankings_parser.py  university_detail_parser.py
src/processors/: data_processor.py
src/scrapers/: __init__.py  base_scraper.py  rankings_scraper.py  selenium_base_scraper.py  selenium_rankings_scraper.py  university_detail_scraper.py
src/storage/: __init__.py  database_manager.py  file_storage.py
src/utils/: exceptions.py  http.py  selenium_helpers.py
tests/: postgres_exporter.py
