[tool.poetry]
name = "world-university-scraper"
version = "0.1.0"
description = ""
authors = ["jose9806"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.2"
black = "^25.1.0"
requests = "^2.32.3"
pandas = "^2.2.3"
beautifulsoup4 = "^4.13.3"
sqlalchemy = "^2.0.38"
selenium = "^4.29.0"
webdriver-manager = "^4.0.2"
lxml = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
